[gd_scene load_steps=11 format=3 uid="uid://bd67yfifu0gjo"]

[ext_resource type="Script" uid="uid://chiiqvq5qrh1i" path="res://scripts/maps_mode.gd" id="1_fni44"]
[ext_resource type="StyleBox" uid="uid://dr2qhx0oklmpu" path="res://assets/Maps/map_pressed.tres" id="1_ieryi"]
[ext_resource type="Texture2D" uid="uid://dpnvcedclgqec" path="res://assets/Maps/blur1.PNG" id="1_lbj2d"]
[ext_resource type="FontFile" uid="uid://dnom70gse18ib" path="res://assets/pixelated-times-new-roman.ttf" id="1_my32b"]
[ext_resource type="Texture2D" uid="uid://cq0y22vugp3wp" path="res://assets/Maps/clear1.png" id="2_u4iso"]
[ext_resource type="Texture2D" uid="uid://bk03iimmx2384" path="res://assets/Maps/clear2.png" id="4_j1xba"]
[ext_resource type="Texture2D" uid="uid://doi6vjlnsj44o" path="res://assets/Maps/blur2.PNG" id="4_u4iso"]
[ext_resource type="StyleBox" uid="uid://bdvxchshlewdq" path="res://assets/Maps/map_unpressed.tres" id="5_fni44"]
[ext_resource type="Texture2D" uid="uid://ddjmt1j7vsajd" path="res://assets/Maps/blur3.PNG" id="6_j1xba"]
[ext_resource type="Texture2D" uid="uid://ci4gwlo0ki8lg" path="res://assets/Maps/clear3.png" id="7_ieryi"]

[node name="Maps and Modes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fni44")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(611, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_ieryi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
offset_right = 605.0
offset_bottom = 436.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureButton1" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("1_lbj2d")
texture_pressed = ExtResource("2_u4iso")
texture_hover = ExtResource("2_u4iso")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_my32b")
theme_override_font_sizes/font_size = 64
text = "Map One
2 - 3 Players
3 Metal Spawn Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(611, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("5_fni44")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel2"]
layout_mode = 2
offset_right = 605.0
offset_bottom = 436.0
size_flags_horizontal = 3

[node name="TextureButton2" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel2/VBoxContainer2"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("4_u4iso")
texture_pressed = ExtResource("4_j1xba")
texture_hover = ExtResource("4_j1xba")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel2/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_my32b")
theme_override_font_sizes/font_size = 64
text = "Map Two
2 - 3 Players
3 Metal Spawn Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(611, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("5_fni44")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel3"]
layout_mode = 2
offset_right = 605.0
offset_bottom = 436.0
size_flags_horizontal = 3

[node name="TextureButton3" type="TextureButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel3/VBoxContainer2"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("6_j1xba")
texture_pressed = ExtResource("7_ieryi")
texture_hover = ExtResource("7_ieryi")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel3/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_my32b")
theme_override_font_sizes/font_size = 64
text = "Map Three
2 - 3 Players
3 Metal Spawn Points"
horizontal_alignment = 1
vertical_alignment = 1
